2008-03-08 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSToolbarItem.m (GSToolbarButton-sendAction:to:): 
	Add a recursion break hack. Needs to be cleaned up.
	
2008-03-08 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSOutlineView.m (-_initOutlineDefaults): New helper
	method extracting code from initWithFrame: and initWithCoder:.
	* Source/NSOutlineView.m (-itemAtRow:): Return nil for invalid row
	numbers. 
	Patch by Quentin Mathe <qmathe@club-internet.fr>. 

2008-03-05 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSWindow.m: deminiaturize window in -makeKeyAndOrderFront:
	(bug #22444) as I tested and confirmed that implicit deminiaturisation
	is done here on MacOSX.

2008-03-05 Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/make_services.m: Standardise paths to avoid error reports when
	two paths point to the same app.

2008-03-04 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSCell.m (-performClickWithFrame:inView:): Call
	sendAction:to: on control even when there is no action.

2008-03-01 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSKeyValueBinding.m
	(-observeValueForKeyPath:ofObject:change:context:): Ignore calls
	with empty change information.

2008-03-01 Nicola Pero <nicola.pero@meta-innovation.com>

	* Source/NSImageCell.m (scaleProportionally): Fixed
	NSScaleProportionally to scale images down, but never up.  Bug
	reported by Herb Otto <herbo@gmac.com>.
	* Headers/AppKit/NSImageCell.h: Documented the whole class.
	
2008-02-26 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSToolTips.m: Fix bug #22421

2008-02-25 Fred Kiefer <FredKiefer@gmx.de>
	
	* Source/NSBitmapImageRep.m (-_premultiply, _unpremultiply): Flag
	the format as changed. Add fast path for 8 bit images.
	* Source/NSBitmapImageRep.m
	(-_convertToFormatBitsPerSample:...bitsPerPixel:) New helper
	method for image conversion. Not fully working.
	
2008-02-18 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSMenuView.m: Change to better respect the size of the
	popup when displaying the menu.